--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nipa</title>
+    <link rel="stylesheet" href="Style.css">
+    
 </head>
+<h1>Nipa Dedhia</h1>
+<p>
+    I completed my studies in Commerce. Currently, working as Manual Software Tester
+</p>
+
+<img src="NDedhia.jpg" width="200px" height="200px"  alt="Nipa" class="ND">
+
 <body>
     
 </body>
